Harshit & Shashank | Fixing horizontal scroll due to Prajjwol's changes.

--- a/dristhi-app/assets/css/custom.css
+++ b/dristhi-app/assets/css/custom.css
@@ -403,7 +403,7 @@ body {
 .detail-section-header {
     color: #999999;
     margin-bottom: 6px;
-    margin-left: 10px;
+    margin-left: 5px;
     font-size: 17px;
     letter-spacing: -.5px;
 }
